RESOLVED FIXED245465
recordStrokeLineWithColorAndThickness doesn't mark the state as having applied changes.
https://bugs.webkit.org/show_bug.cgi?id=245465
Summary recordStrokeLineWithColorAndThickness doesn't mark the state as having applie...
Matt Woodrow
Reported 2022-09-21 00:02:59 PDT
<rdar://98994290> The recordStrokeLineWithColorAndThickness optimised path skips serialising the state object, but fails to mark that we've applied the necessary changes. This means that you can then change state back to it's original value, and we won't detect that it changed.
Attachments
Matt Woodrow
Comment 1 2022-09-21 00:05:17 PDT
Alexey Proskuryakov
Comment 2 2022-09-24 16:58:51 PDT
*** Bug 245145 has been marked as a duplicate of this bug. ***
EWS
Comment 3 2022-09-26 19:20:05 PDT
Committed 254889@main (aabdfc49a52b): <https://commits.webkit.org/254889@main> Reviewed commits have been landed. Closing PR #4560 and removing active labels.
Alexey Proskuryakov
Comment 4 2022-10-16 18:59:56 PDT
*** Bug 246498 has been marked as a duplicate of this bug. ***
Paul Neave
Comment 5 2022-10-18 03:27:36 PDT
Does anyone know when this fix will make its way into Safari? Issue is still present in iOS 16.0.3 and Safari TP. Thanks.
Alexey Proskuryakov
Comment 6 2022-10-26 15:53:12 PDT
Please try it out with iOS 16.2 beta. Apple does not comment on future releases, so we cannot discuss when it will be in shipping Safari.
Alexey Proskuryakov
Comment 7 2022-11-10 09:33:45 PST
*** Bug 247731 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.