Cherry-pick aabdfc49a52b. rdar://problem/98994290

Fix strokeStyle changes not being applied for successive stroke line operations.
    https://bugs.webkit.org/show_bug.cgi?id=245465

    Reviewed by Darin Adler.

    The recordStrokeLineWithColorAndThickness optimised path skips serialising the state object, but fails to mark that we've applied the necessary changes.

    This means that you can then change state back to it's original value, and we won't detect that it changed.

    * LayoutTests/fast/canvas/canvas-strokePath-strokeStyle-expected.html: Added.
    * LayoutTests/fast/canvas/canvas-strokePath-strokeStyle.html: Added.
    * Source/WebCore/platform/graphics/displaylists/DisplayListRecorder.cpp:
    (WebCore::DisplayList::Recorder::strokePath):

    Canonical link: https://commits.webkit.org/254889@main

Canonical link: https://commits.webkit.org/252432.534@safari-7614-branch